# shizen_lec_helper

./: .gitignore  AI_SETUP.md  LICENSE  README.md  config.example.json  pyproject.toml  run.sh
src/shizen_lec_helper/: __init__.py  __main__.py  config.py  deadlines.py  main.py  sos.py  state.py  sync.py  token_setup.py
src/shizenkan_lite/: __init__.py  __main__.py  config.py  main.py  sos.py  state.py  sync.py  token_setup.py  video.py
tests/: smoke_test.sh
