[project]
name = "shizenkan-lite"
version = "0.1.0"
description = "Lightweight SOS (Moodle) sync tool for Shizenkan MBA students"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "yt-dlp>=2024.1.0",
]

[project.scripts]
shizenkan-lite = "shizenkan_lite.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shizenkan_lite"]
